--- a/first-vue-app/index.html
+++ b/first-vue-app/index.html
@@ -4,9 +4,17 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>first-vue-app</title>
+	<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link rel="stylesheet" href="https://cdn.bootcss.com/ionicons/2.0.1/css/ionicons.min.css">
+		<link rel="stylesheet" href="https://cdn.bootcss.com/admin-lte/2.3.11/css/AdminLTE.min.css">
+		<link rel="stylesheet" href="https://cdn.bootcss.com/admin-lte/2.3.11/css/skins/_all-skins.min.css">
   </head>
-  <body class="hold-transition skin-blue sidebar-mini">
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+  <body class="skin-blue fixed" data-spy="scroll" data-target="#scrollspy">
+		
+		<div id="app"></div>
+		<!-- built files will be auto injected -->		
+		<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<script src="https://cdn.bootcss.com/admin-lte/2.3.11/js/app.min.js"></script> 
+	</body>
 </html>
