--- a/first-vue-app/index.html
+++ b/first-vue-app/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>first-vue-app</title>
   </head>
-  <body class="skin-blue fixed" data-spy="scroll" data-target="#scrollspy">
+  <body class="hold-transition skin-blue sidebar-mini">
 		<div id="app"></div>
 		<!-- built files will be auto injected -->		
 	</body>
